Fixed the toggle alignment in the mobile view

--- a/themes/microcks/assets/scss/_common-dark.scss
+++ b/themes/microcks/assets/scss/_common-dark.scss
@@ -13,9 +13,8 @@
   }
 
   @include mobile {
-    margin-left: 10px;
-    margin-top: -4px; // for better alignment
-  } 
+    margin: 0 auto; // for better alignment
+    } 
 }
 
 .dark .theme-switcher {
